fixed buttons and images alignments

--- a/modules/_viewers.scss
+++ b/modules/_viewers.scss
@@ -1,6 +1,6 @@
 
 .embedded-viewer{
-	padding: 5px;
+	padding: 15px;
 	box-sizing: border-box;
 	width: 100%;
 	position: relative;
@@ -35,7 +35,6 @@
 		}
 	}
 	.controls{
-		padding: 10px;
 		height: 38px;
 	}
 }
